# campuslabsChromeExtension

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cron_script.ps1  cron_script.sh  manifest.json  pyproject.toml
.github/: codecov.yml
.github/workflows/: ci.yml  cron.yml  lint.yml
api/: fetchEventsData.js
data-scraper/: campuslabs_events_data.json  scraper.py
popup/: organizations.js  popup.css  popup.html  popup.js
scripts/: background.js  kit.fontawesome.js
